Fixes unexpected bug causing overlap on logo in admin, making it unclickable

--- a/themes/core/cleanslate/public/sass/admin.scss
+++ b/themes/core/cleanslate/public/sass/admin.scss
@@ -335,6 +335,7 @@ span.pager-page {
 #adminToolbar {
   position: relative;
   top: 20px;
+  float: right;
       
     ul, li {
       margin: 0; 
